--- a/aventura.html
+++ b/aventura.html
@@ -96,6 +96,22 @@
        d="m 104.98067,26.25774 c 0,0 -5.449501,-6.613431 -0.77228,-7.735963 4.67721,-1.122531 34.98557,-0.935443 34.98557,-0.935443 l -1.30962,10.476964 z"
        id="path6839"
        inkscape:label="braco-maior-2" />
+	<ellipse
+       style="display:inline;fill:#004455;fill-opacity:1;stroke:#241c1c;stroke-width:0.7;stroke-miterlimit:4;stroke-dasharray:none"
+       id="path7292-4"
+       cx="58.869785"
+       cy="26.590624"
+       rx="8.886714"
+       ry="8.4189901"
+       inkscape:label="bolinha-braco-3" />
+    <ellipse
+       style="display:inline;fill:#006680;fill-opacity:1;stroke:#241c1c;stroke-width:0.7;stroke-miterlimit:4;stroke-dasharray:none"
+       id="path7587-7"
+       cx="58.869778"
+       cy="26.458332"
+       rx="3.0869627"
+       ry="2.8998742"
+       inkscape:label="bolinha-menor-braco-3" />
     <ellipse
        style="fill:#004455;fill-opacity:1;stroke:#241c1c;stroke-width:0.7;stroke-miterlimit:4;stroke-dasharray:none"
        id="path7292"
@@ -286,6 +302,107 @@
        sodipodi:nodetypes="ccscccccsssssccscc"
        inkscape:label="elemento-2" />
   </g>
+  <g
+     inkscape:groupmode="layer"
+     id="layer7"
+     inkscape:label="tubos"
+     sodipodi:insensitive="true">
+    <path
+       style="fill:#cccccc;stroke:#000000;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       d="m 126.325,150.04279 c 0,0 1.26947,-5.61034 4.26289,-2.9911 2.99342,2.61924 28.83338,2.3339 28.83338,2.3339 0,0 7.08764,0.65952 7.46182,-3.26935 0.37417,-3.92886 -2.80633,-14.96709 2.24506,-14.40582 5.0514,0.56126 62.59284,2.64039 62.59284,2.64039 l -1.17722,5.68223 c -0.0663,-1.46007 -41.9918,-5.25797 -56.80649,-4.7501 -3.40316,0.11666 -4.88986,-1.59695 -3.86078,7.46571 0.80177,7.06088 -0.75355,6.38542 -0.78434,7.28511 -0.0177,0.51629 -0.71188,2.31136 -3.47719,3.22395 -3.53863,1.16781 -26.90992,-2.60662 -35.40418,-2.8394 -3.03654,-0.0832 -2.16307,-0.0925 -2.68482,0.9061 l -1.16522,2.23022 z"
+       id="path438"
+       sodipodi:nodetypes="cscssccsssssscc"
+       inkscape:label="tubo-1" />
+    <path
+       style="fill:none;stroke:#4d4d4d;stroke-width:0.05;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1"
+       d="m 127.20493,151.93888 -0.29398,-3.59132 c 0,0 1.43651,-2.34486 2.34793,-1.98074 l 0.0551,4.02723 1.78683,0.0587 0.40949,-2.90212 1.86207,0.50678 -0.43658,2.51074 1.94895,0.16216 0.31664,-2.36049 1.90615,0.23721 -0.27217,2.31017 1.77765,0.18422 0.49972,-2.30362 2.4858,0.18052 -0.60721,2.38297 3.16419,0.35912 -0.44897,-2.62428 2.37996,0.10324 0.41653,2.79113 1.74148,0.19966 0.38541,-2.90864 2.6146,0.0592 -0.33914,3.14928 2.43218,0.26344 0.81689,-3.37298 2.28065,0.0134 -0.26574,3.64431 3.80695,0.31432 -0.55507,-3.96679 3.26728,-0.10826 0.79145,4.20271 c 0,0 3.7719,-0.20624 3.63852,-0.90773 -0.13337,-0.70148 -2.42641,-3.82372 -2.42641,-3.82372 0,0 1.75063,-1.15868 1.93252,-1.66995 0.18188,-0.51127 2.70689,2.44146 2.70689,2.44146 0,0 0.79097,-1.53341 0.76979,-2.94156 -0.0212,-1.40815 -3.18842,-1.42304 -3.18842,-1.42304 l -0.12455,-1.96227 c 0,0 3.10504,-0.34392 3.15205,0.15028 0.047,0.4942 -0.32025,-3.31653 -0.32025,-3.31653 l -3.11388,0.4581 -0.24068,-2.92883 3.29716,0.33232 0.4385,-2.0423 -3.61909,-1.51164 c 0,0 0.917,-3.40533 2.24828,-2.64146 1.33128,0.76386 2.46373,3.5509 2.46373,3.5509 l 2.87164,0.0314 -1.19091,-3.31732 3.63836,0.18658 0.39455,3.09178 2.42047,0.0213 -0.0684,-2.98343 3.11565,0.14042 -0.40225,2.90406 3.18596,0.11189 0.0851,-2.89093 3.01671,0.12817 -1.00708,2.85436 2.27885,0.11321 1.83295,-2.8384 2.52541,0.10339 -0.99887,2.92425 3.30112,0.20872 0.29015,-3.02817 2.36287,0.0945 0.57709,3.15761 2.42291,0.18001 -0.48657,-3.23806 2.87025,0.11262 0.86093,3.38223 3.20493,0.27143 -1.22717,-3.5433 3.47388,0.13382 0.62209,3.6681 3.30478,0.31796 -0.9216,-3.87131 3.00911,0.11404 1.12319,4.08993 2.84126,0.31863 -0.3534,-4.2728 3.44095,0.12831 0.81864,4.63578 3.05291,0.46072 0.82691,-4.92299 3.51348,0.12823"
+       id="path4212"
+       inkscape:label="tubo-1-l" />
+    <path
+       style="fill:#2b2200;stroke:#000000;stroke-width:0.065;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+       d="m 128.73847,136.23443 c 0,0 1.10106,3.5208 4.93638,3.80143 3.83532,0.28064 24.22798,0.0935 24.22798,0.0935 0,0 2.24506,0.74835 2.05798,-2.43215 -0.18709,-3.18051 -0.18709,-18.61533 -0.18709,-18.61533 0,0 -0.46772,-2.89987 0.8419,-2.71278 1.30962,0.18709 33.67595,0 33.67595,0 l 40.87128,-1.02577 v 0 l 0.4285,-2.723 -74.65854,0.55514 c 0,0 -4.7625,-0.66146 -4.82865,4.03489 -0.0661,4.69636 0.19844,18.91771 0.19844,18.91771 0,0 0.52917,2.05052 -1.91823,1.78594 -2.4474,-0.26459 -20.24062,-0.26459 -20.24062,-0.26459 0,0 -3.36386,-0.24724 -3.33558,-3.16633 z"
+       id="path5723"
+       inkscape:label="tubo-2" />
+    <path
+       style="fill:#004455;stroke:#000000;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       d="M 21.560684,18.717586 45.376041,18.057812 45.930266,39.616025 21.66276,39.092187 Z"
+       id="path6407"
+       sodipodi:nodetypes="ccccc"
+       inkscape:label="monitor-3" />
+    <path
+       style="fill:#0088aa;stroke:#000000;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       d="m 23.283333,19.976041 c 0,0 15.742708,-1.852083 20.108333,0.264583 0,0 0.947169,14.793543 0.396875,16.536458 -0.550295,1.742916 -19.976042,1.852084 -20.372917,0.79375 -0.396875,-1.058333 -1.389062,-17.660937 -0.132291,-17.594791 z"
+       id="path6403"
+       inkscape:label="tela-3" />
+    <path
+       style="fill:#004455;stroke:#000000;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       d="m 57.704947,18.24427 c 0,0 -7.939363,-14.1283194 -9.436073,-8.5156595 -1.496709,5.6126595 -2.495958,6.7417015 -2.495958,6.7417015 l 1.389063,0.529166 c 0,0 1.653645,-7.1437492 2.447395,-6.879166 0.79375,0.264583 6.609845,8.434519 6.609845,8.434519 z"
+       id="path6368"
+       inkscape:label="braco-3" />
+    <path
+       style="fill:#004455;stroke:#000000;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       d="m 21.560684,18.717586 c 0,0 22.82317,-2.77644 24.212232,-2.247274 1.389063,0.529166 -0.396875,1.5875 -0.396875,1.5875 z"
+       id="path6809"
+       inkscape:label="sup-3" />
+    <path
+       style="fill:#004455;stroke:#000000;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       d="m 45.930266,39.616025 3.227279,-4.256267 -1.995566,-18.36028 -1.389063,-0.529166 c 0,0 1.761683,0.562268 -0.396875,1.5875 z"
+       id="path6844"
+       inkscape:label="canto-3" />
+  </g>
+  <g class='danger'
+     inkscape:groupmode="layer"
+     id="layer8"
+     inkscape:label="danger">
+    <path
+       style="fill:none;stroke:#d7e3f4;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       d="m 23.690102,25.701305 0.07016,6.99244 c 0,0 4.326427,0.304019 4.279654,-3.086963 -0.04677,-3.390983 -4.349812,-3.905477 -4.349812,-3.905477 z"
+       id="path9563"
+       inkscape:label="d-2"
+       inkscape:transform-center-x="0.16294766"
+       inkscape:transform-center-y="0.078523979" />
+    <path
+       style="fill:none;stroke:#d7e3f4;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       d="m 24.819729,28.074264 -0.09354,2.853103 c 0,0 2.525697,-0.701583 1.730571,-2.081363 -0.795128,-1.379779 -1.637026,-0.77174 -1.637026,-0.77174 z"
+       id="path9565"
+       inkscape:label="d" />
+    <path
+       style="fill:none;stroke:#d5e5ff;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       d="m 28.955467,27.055783 -1.663909,5.614575 1.083426,-0.09236 0.592116,-2.233112 0.631582,0.03376 0.165364,2.133203 1.273308,-0.03307 -1.322917,-6.713803 -0.763122,0.116466 z"
+       id="path9571"
+       inkscape:label="a" />
+    <path
+       style="fill:none;stroke:#d5e5ff;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       d="m 29.43048,28.144565 c -0.423855,0.315105 -0.420172,1.356482 -0.420172,1.356482 l 0.618609,0.09873 z"
+       id="path9573"
+       inkscape:label="a-2" />
+    <path
+       style="fill:none;stroke:#d5e5ff;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       d="m 30.971208,26.21146 -0.100097,5.423642 0.166243,0.843677 0.926041,0.04961 -0.23151,-3.803385 1.02526,3.770312 1.434571,-0.03467 -0.773112,-6.579913 -1.322917,0.198438 1.02526,4.464844 -1.852083,-4.53099 z"
+       id="path9575"
+       inkscape:label="n" />
+    <path
+       style="fill:none;stroke:#d5e5ff;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       d="m 37.066942,26.332729 c 0,0 -2.986694,-2.017387 -3.466343,1.09695 l 0.437958,3.72744 c 0,0 0.245441,2.378524 3.028385,1.20922 0,0 0.53788,-1.19269 0.374177,-1.824115 C 37.277416,29.9108 37.324189,29.9108 37.324189,29.9108 l -1.668024,-0.02353 0.0024,0.654801 1.151164,-0.04662 c 0,0 0.350884,1.379948 -0.397564,1.426551 -0.748447,0.0466 -1.613639,-0.163702 -1.637025,-2.245064 -0.02339,-2.081361 -0.588352,-2.807752 0.140316,-2.970032 0.728668,-0.16228 1.683798,0.327405 1.683798,0.327405 z"
+       id="path10138"
+       inkscape:label="g" />
+    <path
+       style="fill:none;stroke:#d5e5ff;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       d="m 39.545865,26.098869 -2.291836,-0.561267 0.233862,7.249686 2.478924,-0.18709 -0.23386,-1.566867 -1.543481,0.865285 -0.18709,-2.361994 1.286235,0.07016 -0.140317,-0.795128 -1.099145,-0.140317 -0.187089,-2.011204 1.777343,0.18709 z"
+       id="path10140"
+       inkscape:label="e" />
+    <path
+       style="fill:none;stroke:#d5e5ff;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       d="m 39.966815,32.600198 0.09355,-6.945665 c 0,0 3.437752,-0.350791 3.133733,2.595855 0,0 -0.537882,1.145918 -1.753959,1.169305 -1.216076,0.02339 1.941045,2.034589 1.941045,2.034589 l -0.678196,0.865285 -1.777343,-1.449937 -0.140316,1.800728 z"
+       id="path10144"
+       inkscape:label="r" />
+    <path
+       style="fill:none;stroke:#d5e5ff;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       d="m 40.94903,26.917382 -0.09354,1.286233 c 0,0 1.169305,-0.02339 1.122532,-0.397563 -0.04677,-0.374177 -0.121759,-1.004091 -1.028989,-0.88867 z"
+       id="path10148"
+       inkscape:label="r-2" />
+  </g>
+  
   <g
      inkscape:groupmode="layer"
      id="layer4"
