--- a/aventura.html
+++ b/aventura.html
@@ -403,7 +403,7 @@
        inkscape:label="r-2" />
   </g>
   
-  <g
+  <g 
      inkscape:groupmode="layer"
      id="layer4"
      inkscape:label="maquina"
@@ -470,67 +470,67 @@
        rx="61.365082"
        ry="13.283295"
        inkscape:label="circulo-sup" />
-    <path
+    <path class='luzinhas'
        style="fill:#ddff55;stroke:#000000;stroke-width:0.264583px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="m 172.67369,170.22629 c -0.31419,-0.0661 -1.04178,-0.30354 -1.04178,-0.30354 0,0 0.0496,-1.15166 -0.42996,-1.10205 -0.47956,0.0496 -1.27331,-0.0331 -1.55443,0.49609 -0.28112,0.52917 0.0496,1.4056 0.21498,1.43867 0.16536,0.0331 0.78964,0.49464 1.04268,0.15184 0.25303,-0.3428 1.3551,0.0797 1.3551,0.0797 z"
        id="path6233"
        inkscape:label="luz-1" />
-    <path
+    <path class='luzinhas'
        style="fill:#ddff55;stroke:#000000;stroke-width:0.277998px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="m 185.00858,178.905 c -0.32547,0.048 -1.13673,0.0762 -1.13673,0.0762 0,0 -0.73251,-1.13072 -1.12802,-0.91267 -0.39553,0.21813 -1.16147,0.41967 -1.05601,1.03089 0.10534,0.61121 0.99244,1.34102 1.16272,1.3143 0.17036,-0.0265 1.0401,0.19796 1.03529,-0.22304 -0.005,-0.42109 1.26598,-0.40379 1.26598,-0.40379 z"
        id="path6290"
        inkscape:label="luz-2" />
-    <path
+    <path class='luzinhas'
        style="fill:#ddff55;stroke:#000000;stroke-width:0.277998px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="m 202.39626,182.21525 c -0.31133,0.18701 -1.08438,0.55694 -1.08438,0.55694 0,0 -0.66666,-0.89436 -1.04917,-0.49715 -0.38258,0.39734 -1.11732,0.93216 -1.03351,1.53727 0.0839,0.60507 0.90842,1.00895 1.07132,0.90922 0.16285,-0.0994 0.98491,-0.22531 0.9916,-0.6707 0.007,-0.4453 1.21646,-0.95892 1.21646,-0.95892 z"
        id="path6290-0"
        inkscape:label="luz-3" />
-    <path
+    <path class='luzinhas'
        style="fill:#ddff55;stroke:#000000;stroke-width:0.277998px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="m 224.95702,184.75216 c -0.18883,0.28377 -0.70494,0.90231 -0.70494,0.90231 0,0 -1.04362,-0.56681 -1.19331,-0.0665 -0.14984,0.5003 -0.54978,1.25448 -0.17576,1.7723 0.3741,0.51807 1.31856,0.58208 1.41657,0.4321 0.0974,-0.15032 0.77902,-0.56483 0.56542,-0.97116 -0.21343,-0.4063 0.62645,-1.31487 0.62645,-1.31487 z"
        id="path6290-1"
        inkscape:label="luz-4" />
-    <path
+    <path class='luzinhas'
        style="fill:#ddff55;stroke:#000000;stroke-width:0.277998px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="m 249.46367,184.96996 c 0.27723,0.20641 0.9828,0.62722 0.9828,0.62722 0,0 0.84014,-0.82846 1.14853,-0.41007 0.30836,0.4184 0.94421,0.99801 0.7446,1.58576 -0.19937,0.58781 -1.10487,0.92285 -1.24939,0.81294 -0.14447,-0.1099 -0.94617,-0.29415 -0.86807,-0.73181 0.0782,-0.43756 -1.03873,-1.03161 -1.03873,-1.03161 z"
        id="path6290-7"
        inkscape:label="luz-5" />
-    <path
+    <path class='luzinhas'
        style="fill:#ddff55;stroke:#000000;stroke-width:0.277998px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="m 297.66681,17.917551 c 0.34493,0.02212 1.16586,-0.0092 1.16586,-0.0092 0,0 0.25336,-1.152373 0.73988,-0.969438 0.48648,0.182953 1.33544,0.322736 1.48815,0.924383 0.15291,0.601566 -0.42398,1.37571 -0.60508,1.36226 -0.18099,-0.01351 -0.95372,0.268625 -1.12658,-0.140973 -0.17274,-0.409542 -1.433,-0.299453 -1.433,-0.299453 z"
        id="path6290-7-2"
        inkscape:label="luz-5" />
-    <path
+    <path class='luzinhas'
        style="fill:#ddff55;stroke:#000000;stroke-width:0.277998px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="m 276.28454,13.263289 c 0.33112,-0.005 1.13805,-0.104592 1.13805,-0.104592 0,0 0.50612,-1.22499 0.93901,-1.073429 0.43286,0.151592 1.22861,0.228551 1.24206,0.844896 0.0136,0.616283 -0.72261,1.472307 -0.896,1.472977 -0.17334,5.84e-4 -0.98972,0.358415 -1.06602,-0.05557 -0.0761,-0.41399 -1.32892,-0.196254 -1.32892,-0.196254 z"
        id="path6290-7-2-9"
        inkscape:label="luz-5" />
-    <path
+    <path class='luzinhas'
        style="fill:#ddff55;stroke:#000000;stroke-width:0.277998px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="m 250.30347,11.299048 c 0.3385,-0.0898 1.15579,-0.392042 1.15579,-0.392042 0,0 0.4113,-1.2998955 0.86761,-1.2662649 0.45629,0.033663 1.27753,-0.09711 1.34501,0.4881039 0.0676,0.585125 -0.61134,1.591675 -0.78876,1.636822 -0.17738,0.0451 -0.98184,0.59639 -1.09603,0.220562 -0.11397,-0.375866 -1.37738,0.153676 -1.37738,0.153676 z"
        id="path6290-7-2-9-6"
        inkscape:label="luz-5" />
-    <path
+    <path class='luzinhas'
        style="fill:#ddff55;stroke:#000000;stroke-width:0.277998px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="m 226.85924,11.183444 c -0.27723,0.03206 -0.9828,0.0091 -0.9828,0.0091 0,0 -0.84014,-1.3568195 -1.14853,-1.132374 -0.30836,0.224476 -0.94421,0.404202 -0.7446,1.117485 0.19937,0.713194 1.10487,1.617697 1.24939,1.598675 0.14447,-0.01906 0.94617,0.300923 0.86807,-0.185886 -0.0782,-0.486741 1.03873,-0.378362 1.03873,-0.378362 z"
        id="path6290-7-2-9-9"
        inkscape:label="luz-5" />
-    <path
+    <path class='luzinhas'
        style="fill:#ddff55;stroke:#000000;stroke-width:0.277998px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="m 205.2957,13.629131 c -0.27723,0.04659 -0.9828,0.06065 -0.9828,0.06065 0,0 -0.84014,-1.31279 -1.14853,-1.072182 -0.30836,0.240636 -0.94421,0.453686 -0.7446,1.156508 0.19937,0.702745 1.10487,1.559793 1.24939,1.533197 0.14447,-0.02663 0.94617,0.251337 0.86807,-0.23138 -0.0782,-0.482642 1.03873,-0.432799 1.03873,-0.432799 z"
        id="path6290-7-2-9-0"
        inkscape:label="luz-5" />
-    <path
+    <path class='luzinhas'
        style="fill:#ddff55;stroke:#000000;stroke-width:0.277998px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="m 189.24517,17.78395 c -0.27723,0.09018 -0.9828,0.21517 -0.9828,0.21517 0,0 -0.84014,-1.1807 -1.14853,-0.891606 -0.30836,0.289117 -0.94421,0.602138 -0.7446,1.273577 0.19937,0.671399 1.10487,1.386081 1.24939,1.336763 0.14447,-0.04934 0.94617,0.102577 0.86807,-0.367861 -0.0782,-0.470347 1.03873,-0.596111 1.03873,-0.596111 z"
        id="path6290-7-2-9-68"
        inkscape:label="luz-5" />
-    <path
+    <path class='luzinhas'
        style="fill:#ddff55;stroke:#000000;stroke-width:0.277998px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="m 275.7987,182.36078 c 0.31408,0.14426 1.09173,0.40918 1.09173,0.40918 0,0 0.64954,-0.98504 1.03817,-0.6399 0.38862,0.34514 1.13108,0.77988 1.05803,1.3963 -0.0728,0.61641 -0.88886,1.13239 -1.05307,1.05493 -0.16417,-0.0775 -0.98665,-0.091 -1.00125,-0.53533 -0.0145,-0.44426 -1.23051,-0.79311 -1.23051,-0.79311 z"
        id="path6290-7-4"
        inkscape:label="luz-6" />
-    <path
+    <path class='luzinhas'
        style="fill:#ddff55;stroke:#000000;stroke-width:0.277998px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="m 294.0511,175.1708 c 0.33891,-0.0677 1.12372,-0.31066 1.12372,-0.31066 0,0 -0.0535,-1.1787 0.46378,-1.12792 0.51728,0.0508 1.37346,-0.0339 1.67669,0.50773 0.30324,0.5416 -0.0535,1.4386 -0.23188,1.47245 -0.17836,0.0338 -0.85176,0.50624 -1.12469,0.1554 -0.27294,-0.35085 -1.46168,0.0816 -1.46168,0.0816 z"
        id="path6290-7-0"
@@ -1077,7 +1077,12 @@
 <p> Em seguida, continuei com todas as partes, ainda em forma estática, utilizando principalmente as Curvas de Bezier e elipses. Também utilizei de rotações não contínuas, e transformações horizontais e verticais, principalmente em questões de perspectiva, como nas luzes da máquina do tempo. </p>
 <img src ="estatico.png" alt="Estático" style="height:350px";/>
 
-<p> Para as rotações e translações contínuas, utilizei operações de animação do próprio CSS. Estas foram incorporadas nos elementos da tela, nos 4 elementos e na luz da máquina. Houve certa dificuldade em realizar esses movimentos com os 4 elementos, que não eram objetos e sim uma camada, já que o centro passou a ser o centro da imagem, mas no fim funcionou!
+<p> Para as rotações e translações contínuas, utilizei operações de animação do próprio CSS. Estas foram incorporadas nos elementos da tela, nos 4 elementos e na luz da máquina. Houve certa dificuldade em realizar esses movimentos com os 4 elementos, que não eram objetos e sim uma camada, já que o centro passou a ser o centro da imagem, mas no fim funcionou! Veja a seguir o cenário original: </p>
+
+ Houve certa dificuldade em realizar esses movimentos com os 4 elementos, que não eram objetos e sim uma camada, já que o centro passou a ser o centro da imagem, mas no fim funcionou! Veja a seguir o cenério original:</p>
+<img src ="filme.png" alt="Filme" style="height:300px";/>
+
+
 </body>
 <footer>Ana Carol Erthal</footer>
 </html>
